# Scientific-Computing

./: README.md
Set 3/: wifi_helmholtz.py
Set 3/challengeA_project/: README.md
Set 3/challengeA_project/fem/: cylinder_fem.py  fem_ngsolve.py
Set 3/challengeA_project/fem/fem_output/: probe_fem_Re200.csv
Set 3/challengeA_project/include/: LBMSolver.hpp  Probe.hpp
Set 3/challengeA_project/src/: FDSolver.cpp  LBMSolver.cpp  Utils.cpp
science_computation -git/A1_1_A-C/: animate_wave.py  plot_wave.py  wave1d.cpp  wave_leapfrog.cpp
science_computation -git/A1_2_D-G/: diffusion.cpp  diffusion.hpp  main_qE.cpp  main_qF.cpp  plotting_animated.py
science_computation -git/A1_2_H-L/: iteration.cpp  iteration.hpp  main_H.cpp  main_I.cpp  main_J.cpp  main_K.cpp  plot_I.py  plot_J.py  plot_K.py
set3_challengeA/: CMakeLists.txt
set3_challengeA/include/: Config.hpp  FDSolver.hpp  Field.hpp  Grid.hpp  Utils.hpp
set3_challengeA/scripts/: plot_st_vs_re.py  st_from_probe.py
set3_challengeA/src/: Probe.cpp  main.cpp
